--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,9 +27,9 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
-            <a href="http://github.com/barryclark/jekyll-now">GitHub Repo</a>
+            <a href="{{ site.baseurl }}">Blog</a>            
+            <a href="https://github.com/AnupamRanku">GitHub</a>
           </nav>
         </header>
       </div>
